# jumper

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: release.yml
.vibe/kernel/: AI_WORKFLOW.md  CHANGE_CONVENTIONS.md  COMMAND_INTERFACE.md  CONTEXT_ROUTING.md  DOCS_CONVENTIONS.md  PRINCIPLES.md  SECURITY_BOUNDARIES.md  SETUP.md
.vibe/kernel/examples/: CLI_APPS.md  DIST_ARTIFACTS.md  GITHUB_RELEASES.md  RUST_PROJECTS.md
docs/architecture/: overview.md
prompts/: README.md
scripts/: install.sh  release-bump.sh  release.sh
src/: lib.rs  main.rs
